--- a/HookMemory/Info.plist
+++ b/HookMemory/Info.plist
@@ -7,6 +7,11 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>FjallaOne-Regular.ttf</string>
+		<string>Hind-SemiBold.ttf</string>
+	</array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
