--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+
 # Created by https://www.gitignore.io/api/xcode
 
 ### Xcode ###
@@ -46,3 +47,8 @@ xcuserdata/
 # CocoaPods - Only use to conserve bandwidth / Save time on Pushing
 #           - Also handy if you have a large number of dependant pods
 #           - AS PER https://guides.cocoapods.org/using/using-cocoapods.html NEVER IGNORE THE LOCK FILE
+Pods/
+Podfile.lock
+.DS_Store
+
+# End of https://www.gitignore.io/api/cocoapods
