--- a/HookMemory/Source/Info.plist
+++ b/HookMemory/Source/Info.plist
@@ -1056,6 +1056,10 @@
 			<key>SKAdNetworkIdentifier</key>
 			<string>mqn7fxpca7.skadnetwork</string>
 		</dict>
+		<dict>
+			<key>SKAdNetworkIdentifier</key>
+			<string>z24wtl6j62.skadnetwork</string>
+		</dict>
 	</array>
 	<key>UIAppFonts</key>
 	<array>
